[gd_scene load_steps=6 format=2]

[ext_resource path="res://ADDA assets/SwordTopDown.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=2]
[ext_resource path="res://Scripts/WeaponDamageBox.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.62657
height = 27.319

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.66637
height = 32.7383

[node name="Weapon" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 33
script = ExtResource( 2 )

[node name="WeaponSprite" type="Sprite" parent="."]
position = Vector2( 0.500912, -0.35021 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DamageBox" type="Area2D" parent="."]
position = Vector2( 0.125, -0.5 )
collision_layer = 32
collision_mask = 24
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 0.0883904, -4.5078 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
[connection signal="Hit" from="DamageBox" to="." method="_on_hit"]
[connection signal="area_entered" from="DamageBox" to="DamageBox" method="_on_DamageBox_area_entered"]
